--- a/Web/src/styles/core.scss
+++ b/Web/src/styles/core.scss
@@ -22,9 +22,9 @@
     box-sizing: inherit;
   }
 
-  body {
-    padding-top: 70px;
-  }
+  //body {
+  //  padding-top: 70px;
+  //}
 
   .navbar-header {
     float: none;
