--- a/Web/src/static/themes/philipjbuttrose.css
+++ b/Web/src/static/themes/philipjbuttrose.css
@@ -3,7 +3,7 @@
 ----------------------*/
 body{
 	font-family: Roboto, sans-serif;
-	font-size:18px;
+	font-size:12px;
 	color:#5d5e5f;
 	font-weight:100;
 	overflow-x:hidden;
@@ -89,6 +89,10 @@ a:focus,
 
 .primary {
 	color:#5AA9CE;
+}
+
+.page-header {
+    margin: 60px 0 20px
 }
 
 /*----------------------
@@ -183,7 +187,7 @@ a:focus,
 	text-indent: 200%;
 	white-space: nowrap;
 	overflow: hidden;
-    background: url("../assets/logo.png");
+    background: url("../images/logo.png");
 }
 
 #main-nav a.ir-logo span{
@@ -462,7 +466,7 @@ a.btn-theme:focus{
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-    background-image: url(jumbotron-back.stretched2.png);
+    background-image: url(../images/jumbotron-back.stretched2.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     opacity: 1
@@ -1108,7 +1112,7 @@ a.btn-theme:focus{
     height:48px;
     top:-160px;
     left:-80px;
-    background:url('../assets/loader.gif') no-repeat;
+    background:url('../images/loader.gif') no-repeat;
     z-index:10;
 }
 
