--- a/Web/src/static/themes/philipjbuttrose.css
+++ b/Web/src/static/themes/philipjbuttrose.css
@@ -453,7 +453,7 @@ a.btn-theme:focus{
     height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
-    opacity: 0.5;
+    /*opacity: 1;*/
     z-index: -1
 }
 
@@ -466,10 +466,10 @@ a.btn-theme:focus{
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-    background-image: url(../images/jumbotron-back.stretched2.png);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    opacity: 1
+    /*background-image: url(../images/jumbotron-back.stretched2.png);*/
+    /*background-size: 100% 100%;*/
+    /*background-repeat: no-repeat;*/
+    /*opacity: 1;*/
 }
 
 .jumbotron {
@@ -528,7 +528,7 @@ a.btn-theme:focus{
     margin:0;
     padding:0;
     font-size:150%;
-    font-weight:400;
+    font-weight:800;
     line-height:48px;
     letter-spacing:0.02em;
     word-spacing:0.05em;
@@ -540,7 +540,7 @@ a.btn-theme:focus{
     padding:10px;
     font-size:100%;
     line-height:55px;
-    font-weight:300;
+    font-weight:600;
     letter-spacing:0.02em;
     word-spacing:0.02em;
     text-transform:uppercase;
