--- a/Web/src/static/themes/philipjbuttrose.css
+++ b/Web/src/static/themes/philipjbuttrose.css
@@ -90,10 +90,11 @@ a:focus,
 .primary {
 	color:#5AA9CE;
 }
-
+/*
 .page-header {
     margin: 60px 0 20px
 }
+*/
 
 /*----------------------
 ---Main Layout Styles---
