--- a/Web/src/styles/burger-menu.scss
+++ b/Web/src/styles/burger-menu.scss
@@ -33,6 +33,7 @@
     padding: 0.8em;
     .menu-item {
       display: block;
+      cursor: pointer;
       margin-bottom: 10px !important;
       :hover{
           color:antiquewhite;
